--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Install Bandit
       run: pip install bandit
     - name: Run Bandit Scan
-      run: bandit -ll -ii -r .
+      run: bandit -ll -ii -f json -o bandit-report.json -r .
       
