Update main.yml 5

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,10 @@ jobs:
       run: pip install bandit
     - name: Run Bandit Scan
       run: bandit -ll -ii -f json -o bandit-report.json -r .
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: bandit-findings
+        path: bandit-report.json
       
